@@ -1,7 +1,7 @@
 #  File src/library/base/R/warnings.R
 #  Part of the R package, https://www.R-project.org
 #
-#  Copyright (C) 1995-2016 The R Core Team
+#  Copyright (C) 1995-2017 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -18,10 +18,9 @@
 
 warnings <- function(...)
 {
-    if(!exists("last.warning", envir=baseenv())) return()
-    last.warning <- get("last.warning", envir = baseenv())
-    if(!(length(last.warning))) return()
-    structure(last.warning, dots = list(...), class = "warnings")
+    if(length(last.warning <- baseenv()[["last.warning"]]))
+        structure(last.warning, dots = list(...), class = "warnings")
+    ## else NULL
 }
 
 `[.warnings` <- function(x, ...)
@@ -35,30 +34,65 @@ duplicated.warnings <- function(x, incomparables = FALSE, ...)
 unique.warnings <- function(x, incomparables = FALSE, ...)
     x[!duplicated(x, incomparables, ...)]
 
-print.warnings <- function(x, ...)
+print.warnings <- function(x, tags,
+                           header = ngettext(n, "Warning message:\n", "Warning messages:\n"),
+                           ...)
 {
     if(n <- length(x)) {
-        cat(ngettext(n, "Warning message:\n", "Warning messages:\n"))
+        if(length(header)) cat(header)
+        if(missing(tags) || length(tags) == 0)
+            tags <- if(n == 1L) "" else paste0(seq_len(n), ": ")
+        else if(length(tags <- as.character(tags)) != n)
+            stop("'tags' must be a character vector of the same length as 'x'")
         msgs <- names(x)
         for(i in seq_len(n)) {
-            ind <- if(n == 1L) "" else paste0(i, ": ")
-            out <- if(length(x[[i]])) {
+            out <- if(length(x[[i]])) { ## the 'call' iff (call. = TRUE) as by default
                 ## deparse can overshoot cutoff
                 temp <- deparse(x[[i]], width.cutoff = 50L, nlines = 2L)
                 ## Put on one line if narrow enough.
                 sm <- strsplit(msgs[i], "\n")[[1L]]
-                nl <- if(nchar(ind, "w") + nchar(temp[1L], "w") +
+                nl <- if(nchar(tags[i], "w") + nchar(temp[1L], "w") +
                          nchar(sm[1L], "w") <= 75L)
                     " " else "\n  "
-                paste(ind, "In ",
+                paste(tags[i], "In ",
                       temp[1L], if(length(temp) > 1L) " ...",
                       " :", nl, msgs[i], sep = "")
-            } else paste0(ind, msgs[i])
+            } else paste0(tags[i], msgs[i])
             do.call("cat", c(list(out), attr(x, "dots"), fill=TRUE))
         }
     }
     invisible(x)
 }
+
+summary.warnings <- function(object, ...) {
+    msgs <- names(object)
+    calls <- as.character(object) ## TODO? or rather -- aligned with print() method above --
+    ## lapply(object, deparse, width.cutoff = 50L * 2L, back.tick=FALSE, control=NULL))
+    ss <- ": "
+    c.m. <- paste(calls, msgs, sep = ss)
+    if(length(i.no.call <- which(calls == "NULL")))
+        c.m.[i.no.call] <- substr(c.m.[i.no.call],
+				  nchar(paste0("NULL", ss))+1L, 100000L)
+    tm <- table(c.m., deparse.level=0L)
+    structure(unique(object), counts = as.vector(tm), class = "summary.warnings")
+}
+
+print.summary.warnings <- function(x, ...) {
+    n <- length(x)
+    cn <- attr(x, "counts")
+    if(n == 0)
+	cat("No warnings\n")
+    else if(n == 1)
+	print.warnings(x, header = paste(sum(cn), "identical warnings:\n"))
+    else ## n >= 2
+	print.warnings(x, tags = paste0(format(cn), "x : "),
+		       header = gettextf("Summary of (a total of %d) warning messages:\n",
+					 sum(cn)))
+    invisible(x)
+}
+
+
+
 
 ##' @title Warn about extraneous arguments in the "..."	 (of its caller).
 ##' @author Martin Maechler, June 2012, May 2014
